feat(image upload): switch from storing images in DB to storing on disk
